<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

    <ImageView
            android:layout_width="145dp"
            android:layout_height="152dp" app:srcCompat="@drawable/ic_baseline_account_circle_24"
            android:id="@+id/logoutImage"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <Button
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/logoutBtn"
            style="@style/ButtonForm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/usernameProfile"
            android:textColor="@color/LightGrey"
            style="@style/TextViewStyle"
            app:layout_constraintTop_toBottomOf="@+id/logoutImage" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/emailProfile"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/emailProfile"
            android:layout_marginBottom="150dp"
            android:textColor="@color/LightGrey"
            style="@style/TextViewStyle"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/logoutBtn"/>


</androidx.constraintlayout.widget.ConstraintLayout>