<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/black">

    <TextView
            android:text="@string/addNewTicket"
            android:textSize="40sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/newTicketHeading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:id="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newTicketHeading">

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/Spinner_tickets"
                android:theme="@style/SpinnerStyle"
                android:id="@+id/titleSpinner"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/Spinner_priority"
                android:theme="@style/SpinnerStyle"
                android:id="@+id/prioritySpinner"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/esc"
                style="@style/CredentialForm"
                android:backgroundTint="@color/yellow"
                android:id="@+id/estEditText"/>
    </LinearLayout>

    <EditText
            android:id="@+id/ticketTitleEditText"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            style="@style/CredentialForm"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:hint="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
    <EditText
            android:id="@+id/titleDesEditText"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            style="@style/CredentialForm"
            android:imeOptions="actionDone"
            android:hint="@string/titleDes"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketTitleEditText"/>
    <Button
            android:text="@string/addNewTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/addNewTicketBtn"
            style="@style/ButtonForm"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleDesEditText"/>

</androidx.constraintlayout.widget.ConstraintLayout>